# capella-collab-manager

./: .commitlintrc.yml  .compliance-config.toml  .git_archival.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .secrets.yaml  404.html  CONTRIBUTING.md  Chart.yaml  Dockerfile  Makefile  README.md  git-conventional-commits.json  index.html  karma.conf.js  license_header.txt  nginx.conf  options.yaml  package-lock.json  pull_request_template.md  setup.cfg  style.css  values.yaml
backend/: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .trivyignore  Dockerfile  MANIFEST.in  Makefile  README.md  alembic.ini  generate_git_archival.py  git_askpass.py  plugin_schema.yml  pyproject.toml  setup.cfg  setup.py  startup.sh  versioneer.py
backend/capellacollab/: __init__.py  __main__.py  _version.py  metrics.py  openapi.py  redirects.py  routes.py  scheduling.py
backend/capellacollab/alembic/: env.py  script.py.mako
backend/capellacollab/announcements/: crud.py  exceptions.py  injectables.py  models.py  routes.py
backend/capellacollab/cli/: __init__.py  __main__.py  keys.py  logging.py  openapi.py  scheduler.py  ws.py
backend/capellacollab/config/: __init__.py  config_schema.json  config_schema.yaml  crud.py  diff.py  exceptions.py  generate.py  loader.py  models.py  routes.py
backend/capellacollab/configuration/: core.py  models.py  routes.py  util.py
backend/capellacollab/core/: __init__.py  cache.py  credentials.py  exceptions.py  garbage_cleaner.py  logging.py  metadata.py  models.py  pydantic.py  responses.py
backend/capellacollab/events/: crud.py  models.py  routes.py
backend/capellacollab/extensions/: __init__.py
backend/capellacollab/feedback/: crud.py  email.jinja  exceptions.py  metrics.py  models.py  routes.py  util.py
backend/capellacollab/health/: models.py  routes.py
backend/capellacollab/metadata/: routes.py
backend/capellacollab/models/: crud.py  models.py  routes.py
backend/capellacollab/navbar/: routes.py
backend/capellacollab/notices/: crud.py  exceptions.py  injectables.py  models.py  routes.py
backend/capellacollab/permissions/: exceptions.py  injectables.py  models.py  routes.py
backend/capellacollab/pipelines/: routes.py
backend/capellacollab/plugins/: crud.py  injectables.py  models.py  routes.py  schema.py
backend/capellacollab/projects/: crud.py  exceptions.py  injectables.py  models.py  routes.py  validation.py
backend/capellacollab/routes/: __init__.py  guacamole.py  notices.py  sessions.py  status.py  sync.py  users.py
backend/capellacollab/schemas/: notices.py  sessions.py
backend/capellacollab/sessions/: __init__.py  alerting.py  auth.py  crud.py  database.py  exceptions.py  guacamole.py  idletimeout.py  injectables.py  injection.py  metrics.py  models.py  models2.py  routes.py  schema.py  session_alert.jinja  sessions.py  util.py  workspace.py
backend/capellacollab/settings/: __init__.py  routes.py
backend/capellacollab/sources/: models.py
backend/capellacollab/sql_models/: __init__.py  extensions.py  notices.py  sessions.py  sources.py  users.py
backend/capellacollab/tags/: core.py  crud.py  exceptions.py  injectables.py  models.py  routes.py
backend/capellacollab/tools/: crud.py  exceptions.py  injectables.py  models.py  routes.py  util.py
backend/capellacollab/users/: crud.py  exceptions.py  injectables.py  metrics.py  models.py  routes.py
backend/capellacollab/utils/: git_utils.py
backend/config/: config_template.yaml
backend/plugin_schema/: plugin_schema.html  schema_doc.css  schema_doc.min.js
backend/t4cclient/: __init__.py  __main__.py  alembic.ini  config.py
backend/t4cclient/alembic/: env.py  script.py.mako
backend/t4cclient/config/: __init__.py  diff.py  loader.py
backend/t4cclient/core/: credentials.py  garbage_cleaner.py  metadata.py
backend/t4cclient/extensions/: __init__.py  guacamole.py  t4c.py
backend/t4cclient/projects/: crud.py  models.py  routes.py
backend/t4cclient/routes/: __init__.py  files.py  guacamole.py  notices.py  oauth.py  open_api_configuration.py  sessions.py  status.py  sync.py  users.py
backend/t4cclient/schemas/: __init__.py  guacamole.py  notices.py  oauth.py  sessions.py
backend/t4cclient/sessions/: __init__.py  database.py  garbage_cleaner.py  guacamole.py  models.py  routes.py  schema.py  sessions.py
backend/t4cclient/sql_models/: __init__.py  extensions.py  notices.py  projects.py  repositories.py  sessions.py  users.py
backend/tests/: conftest.py  test_alembic.py  test_alerts.py  test_all_pipelines.py  test_beta.py  test_config.py  test_event_creation.py  test_feedback.py  test_metrics.py  test_navbar.py  test_openapi.py  test_permissions.py  test_projects_routes.py  test_projects_users_routes.py  test_session_operator_k8s.py  test_sessions_idletimeout.py  test_sessions_routes.py  test_tools.py
backend/tests/cli/: test_cli.py  test_keys.py  test_openapi_generation.py  test_workspace_backup.py  test_ws.py
backend/tests/config/: test_app_configuration.py
backend/tests/configuration/: test_global_configuration.py
backend/tests/core/: conftest.py  fixtures.py  test_auth.py  test_auth_injectables.py  test_auth_routes.py  test_database_metrics.py
backend/tests/data/: example_config.yaml
backend/tests/projects/: fixtures.py  test_project_volumes.py  test_projects_permissions.py  test_projects_routes.py  test_projects_tools.py  test_projects_users_routes.py
backend/tests/sessions/: fixtures.py  test_session_alerting.py  test_session_auth.py  test_session_environment.py  test_session_feedback.py  test_session_hooks.py  test_session_idletimeout.py  test_session_injection.py  test_session_operator_k8s.py  test_session_routes.py  test_session_sharing.py  test_session_util.py  test_sessions_idletimeout.py  test_sessions_routes.py
backend/tests/settings/: conftest.py  fixtures.py  test_alerts.py  test_announcements.py  test_configuration.py  (+4 more)
mocks/licence-server/: .gitignore  Dockerfile  pyproject.toml  setup.cfg  setup.py
(+2965 files in other folders)
