[metadata]
name = t4c-client-backend
version = 0.0.1
description = Backend for the T4C Client Manager to request T4C Docker Containers. 
author = Moritz Weber
author_email = moritz.weber@deutschebahn.com


[options]
packages = find:
install_requires =
    fastapi
    pydantic
    docker
    python-jose
    requests_oauthlib
    sqlalchemy
    psycopg2
    alembic
    kubernetes
    python-dateutil
    msal
    cachetools
