[metadata]
name = capellacollab-backend
version = 0.0.1
description = Backend of the Capella Collaboration Manager 
author = Moritz Weber
author_email = moritz.weber@deutschebahn.com

[options]
packages = find:
install_requires =
    PyYAML
    alembic
    appdirs
    cachetools
    docker
    fastapi
    kubernetes
    msal
    psycopg2-binary
    pydantic
    python-dateutil
    python-jose
    requests_oauthlib
    sqlalchemy
    uvicorn[standard]

[options.extras_require]
dev = 
    black
    deepdiff
    isort
    mypy
    pylint
    pytest

[options.entry_points]
capellacollab.extensions.backups =
    ease = capellacollab.extensions.backups.ease
    jenkins = capellacollab.extensions.backups.jenkins
capellacollab.extensions.modelsources =
    git = capellacollab.extensions.modelsources.git
    t4c = capellacollab.extensions.modelsources.t4c
capellacollab.operators =
    k8s = capellacollab.core.operators.k8s:KubernetesOperator
    docker = capellacollab.core.operators.docker:DockerOperator
capellacollab.authentication.providers = 
    oauth = capellacollab.core.authentication.provider.oauth
    azure = capellacollab.core.authentication.provider.azure
