[metadata]
name = t4c-client-backend
version = 0.0.1
description = Backend for the T4C Client Manager to request T4C Docker Containers.
author = Moritz Weber
author_email = moritz.weber@deutschebahn.com

[options]
packages = find:
install_requires =
    PyYAML
    alembic
    appdirs
    cachetools
    docker
    fastapi
    kubernetes
    msal
    psycopg2-binary
    pydantic
    python-dateutil
    python-jose
    requests_oauthlib
    sqlalchemy
    uvicorn[standard]

[options.extras_require]
dev =
    black
    deepdiff
    isort
    mypy
    pylint
    pytest

[options.entry_points]
capellacollab.extensions.backups =
    ease = t4cclient.extensions.backups.ease
    jenkins = t4cclient.extensions.backups.jenkins
capellacollab.extensions.modelsources =
    git = t4cclient.extensions.modelsources.git
    t4c = t4cclient.extensions.modelsources.t4c
capellacollab.operators =
    k8s = t4cclient.sessions.operators.k8s:KubernetesOperator
    docker = t4cclient.sessions.operators.docker:DockerOperator
capellacollab.authentication.providers =
    oauth = t4cclient.core.authentication.provider.oauth
    azure = t4cclient.core.authentication.provider.azure
