[metadata]
name = capellacollab-backend
url = https://github.com/DSD-DBS/capella-collab-manager
author = DB Netz AG
long_description = file: README.md
long_description_content_type = text/markdown
keywords = arcadia, capella, mbse, model-based systems engineering
license = Apache

[options]
packages = find:
install_requires =
    PyYAML
    alembic
    appdirs
    cachetools
    docker
    fastapi
    kubernetes
    msal
    psycopg2-binary
    pydantic
    python-dateutil
    python-jose
    requests_oauthlib
    sqlalchemy
    uvicorn[standard]
    GitPython
    python-slugify[unidecode]

python_requires = >=3.8

[options.extras_require]
dev =
    black
    deepdiff
    isort
    mypy
    pylint
    pytest

[options.entry_points]
capellacollab.extensions.backups =
    ease = capellacollab.extensions.backups.ease
    jenkins = capellacollab.extensions.backups.jenkins
capellacollab.extensions.modelsources =
    git = capellacollab.extensions.modelsources.git
    t4c = capellacollab.extensions.modelsources.t4c
capellacollab.operators =
    k8s = capellacollab.core.operators.k8s:KubernetesOperator
    docker = capellacollab.core.operators.docker:DockerOperator
capellacollab.authentication.providers =
    oauth = capellacollab.core.authentication.provider.oauth
    azure = capellacollab.core.authentication.provider.azure
capellacollab.settings.modelsources =
    git = capellacollab.settings.modelsources.git
    t4c = capellacollab.settings.modelsources.t4c

[versioneer]
VCS = git
style = pep440
versionfile_source = capellacollab/_version.py
versionfile_build = capellacollab/_version.py
tag_prefix =
parentdir_prefix = capellacollab-
