# SPDX-FileCopyrightText: Copyright DB Netz AG and the capella-collab-manager contributors
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = licence-server-mock
version = 0.0.1
description =
author = Moritz Weber

[options]
packages = find:
install_requires =
    fastapi
    uvicorn
    pydantic
